2005-07-18 13:32 Mike Park  <mike.park@nasa.gov>

	* src/plan.c (planriorityWithThisRanking) added to complement
	planItemWithThisRanking

2005-07-18 12:58 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridSetConnValuesWithMetricErrorMagnatude) removed.
	* src/gridinsert.c (gridAdaptBasedOnConnRankings) the removed method
	gridSetConnValuesWithMetricErrorMagnatude has been inlined.

2005-07-18 08:35 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptBasedOnConnRankings) move the conn setup
	and teardown methods into this function
	* src/unit_main.c (main) simplfiy for new gridAdaptBasedOnConnRankings.
	* src/unit_main.c (main) keep going if bad params

2005-07-14 16:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotGeomFaceUV) write face UV params.
	* src/unit_main.c (main) call gridWriteTecplotGeomFaceUV if bad params.

2005-07-14 14:16 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridRightHandedBoundaryUV) added to test UV params.
	* src/unit_main.c (main) test gridRightHandedBoundaryUV, commented 
	gridRobustProject.

2005-07-14 09:38 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridUntangleBadFaceParameters) band-aid to fix
	a bad projection during save part. should be cleaned up.

2005-07-06 10:47 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) added -le option to setup spacing for
	leading edge unit problem. turned off gridCOST_CNST_VALID.

2005-06-07 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridsetcostconstraint_) turns on  
	gridCOST_FCN_JAC_SCALED_MEAN_RATIO cost when gridCOST_CNST_VALID
	bit is set.

2005-06-07 13:35 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridAR,gridCellARDerivative) added
	gridCOST_FCN_JAC_SCALED_MEAN_RATIO cost.

2005-06-07 13:10 Mike Park  <mike.park@nasa.gov>

	* src/gridshape.c (gridMinCellJacDetDeriv2) added a differentiated
	version of gridMinCellJacDet2.

2005-06-07 12:39 Mike Park  <mike.park@nasa.gov>
