@@ -1,3 +1,9 @@
+2005-07-18 13:47 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridinsert.c (gridAdaptBasedOnConnRankings) replaced grid
+	Conn Value logic with a reuse of plan, so that it can removed
+	from grid.
+
 2005-07-18 13:32 Mike Park  <mike.park@nasa.gov>
 
 	* src/plan.c (planriorityWithThisRanking) added to complement
